--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: list-sorting-backend
     runtime: node
     plan: free
-    buildCommand: cd backend && npm ci && npm run build
+    buildCommand: cd backend && npm install --production=false && npm run build
     startCommand: cd backend && npm start
     envVars:
       - key: NODE_ENV
