use rootDir in render.yaml for proper directory handling

--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,9 @@ services:
     name: list-sorting-backend
     runtime: node
     plan: free
-    buildCommand: cd backend && npm install --production=false && npm run build
-    startCommand: cd backend && npm start
+    rootDir: backend
+    buildCommand: npm install --production=false && npm run build
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
@@ -16,8 +17,9 @@ services:
     name: list-sorting-frontend
     runtime: node
     plan: free
-    buildCommand: cd frontend && npm install && npm run build
-    startCommand: cd frontend && npm start
+    rootDir: frontend
+    buildCommand: npm install && npm run build
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
