--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "react-intersection-observer": "^9.5.3"
-  },
-  "devDependencies": {
+    "react-intersection-observer": "^9.5.3",
     "typescript": "^5.3.3",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
@@ -25,5 +23,6 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
-  }
+  },
+  "devDependencies": {}
 }
